large projects running

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
-
 :root {
-  --primaryLightColor: #ffa500;
+  --primaryLightColor: #33A684;
   --primaryColor: #02f96a;
   --primaryDarkColor: #c02c03;
   --mainWhite: #fff;
@@ -231,9 +230,39 @@ button:focus {
 .hero-content h1 {
   font-size: 2rem;
 }
-.hero-content h2 span {
+.span {
   color: #bd0303;
   font-weight: 900;
+  -webkit-animation: heartbeat 1.5s infinite;
+  animation: heartbeat 1.5s infinite;
+}
+
+@keyframes heartbeat
+{
+  0%
+  {
+    transform: scale( 1.1 );
+  }
+  20%
+  {
+    transform: scale( 1.1);
+  }
+  40%
+  {
+    transform: scale( 1 );
+  }
+  60%
+  {
+    transform: scale( 1.1 );
+  }
+  80%
+  {
+    transform: scale( 1 );
+  }
+  100%
+  {
+    transform: scale(1.1);
+  }
 }
 .hero-content h2 {
   font-weight: 900;
@@ -444,7 +473,7 @@ button:focus {
     font-size: 16px;
   }
   .footer {
-    padding: 0 5rem;
+    padding: 0 3rem;
   }
   .footer h4 {
     font-size: 0.8rem;
@@ -467,9 +496,7 @@ button:focus {
     font-weight: 500;
     font-size: 15px;
   }
-  .footer {
-    padding: 0 3rem;
-  }
+
 }
 @media screen and (max-width: 575.98px) {
 }
