--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 :root {
-  --primaryLightColor: #33A684;
+  --primaryLightColor: #1cba70;
   --primaryColor: #02f96a;
   --primaryDarkColor: #c02c03;
   --mainWhite: #fff;
@@ -231,36 +231,29 @@ button:focus {
   font-size: 2rem;
 }
 .span {
-  color: #bd0303;
+  color: #ffee08;
   font-weight: 900;
   -webkit-animation: heartbeat 1.5s infinite;
   animation: heartbeat 1.5s infinite;
 }
 
-@keyframes heartbeat
-{
-  0%
-  {
-    transform: scale( 1.1 );
+@keyframes heartbeat {
+  0% {
+    transform: scale(1.1);
   }
-  20%
-  {
-    transform: scale( 1.1);
+  20% {
+    transform: scale(1.1);
   }
-  40%
-  {
-    transform: scale( 1 );
+  40% {
+    transform: scale(1);
   }
-  60%
-  {
-    transform: scale( 1.1 );
+  60% {
+    transform: scale(1.1);
   }
-  80%
-  {
-    transform: scale( 1 );
+  80% {
+    transform: scale(1);
   }
-  100%
-  {
+  100% {
     transform: scale(1.1);
   }
 }
@@ -496,7 +489,6 @@ button:focus {
     font-weight: 500;
     font-size: 15px;
   }
-
 }
 @media screen and (max-width: 575.98px) {
 }
